# src/ClientApi/apis/PartyApi.ts
@@ -1,0 +1,97 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WaitingList.Api
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  CheckInResponse,
+  GetPartyResponse,
+} from '../models/index';
+import {
+    CheckInResponseFromJSON,
+    CheckInResponseToJSON,
+    GetPartyResponseFromJSON,
+    GetPartyResponseToJSON,
+} from '../models/index';
+
+/**
+ * 
+ */
+export class PartyApi extends runtime.BaseAPI {
+
+    /**
+     */
+    async apiPartyCheckInPostRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<CheckInResponse>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("Bearer", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+        const response = await this.request({
+            path: `/api/party/check-in`,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => CheckInResponseFromJSON(jsonValue));
+    }
+
+    /**
+     */
+    async apiPartyCheckInPost(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<CheckInResponse> {
+        const response = await this.apiPartyCheckInPostRaw(initOverrides);
+        return await response.value();
+    }
+
+    /**
+     */
+    async getPartyGetRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<GetPartyResponse>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("Bearer", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+        const response = await this.request({
+            path: `/get-party`,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => GetPartyResponseFromJSON(jsonValue));
+    }
+
+    /**
+     */
+    async getPartyGet(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<GetPartyResponse> {
+        const response = await this.getPartyGetRaw(initOverrides);
+        return await response.value();
+    }
+
+}
