# src/ClientApi/models/GetPartyResponse.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WaitingList.Api
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ValidationMessage } from './ValidationMessage';
+import {
+    ValidationMessageFromJSON,
+    ValidationMessageFromJSONTyped,
+    ValidationMessageToJSON,
+    ValidationMessageToJSONTyped,
+} from './ValidationMessage';
+import type { PartyDto } from './PartyDto';
+import {
+    PartyDtoFromJSON,
+    PartyDtoFromJSONTyped,
+    PartyDtoToJSON,
+    PartyDtoToJSONTyped,
+} from './PartyDto';
+
+/**
+ * 
+ * @export
+ * @interface GetPartyResponse
+ */
+export interface GetPartyResponse {
+    /**
+     * 
+     * @type {Array<ValidationMessage>}
+     * @memberof GetPartyResponse
+     */
+    messages: Array<ValidationMessage>;
+    /**
+     * 
+     * @type {PartyDto}
+     * @memberof GetPartyResponse
+     */
+    party?: PartyDto;
+}
+
+/**
+ * Check if a given object implements the GetPartyResponse interface.
+ */
+export function instanceOfGetPartyResponse(value: object): value is GetPartyResponse {
+    if (!('messages' in value) || value['messages'] === undefined) return false;
+    return true;
+}
+
+export function GetPartyResponseFromJSON(json: any): GetPartyResponse {
+    return GetPartyResponseFromJSONTyped(json, false);
+}
+
+export function GetPartyResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): GetPartyResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'messages': ((json['messages'] as Array<any>).map(ValidationMessageFromJSON)),
+        'party': json['party'] == null ? undefined : PartyDtoFromJSON(json['party']),
+    };
+}
+
+export function GetPartyResponseToJSON(json: any): GetPartyResponse {
+    return GetPartyResponseToJSONTyped(json, false);
+}
+
+export function GetPartyResponseToJSONTyped(value?: GetPartyResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'messages': ((value['messages'] as Array<any>).map(ValidationMessageToJSON)),
+        'party': PartyDtoToJSON(value['party']),
+    };
+}
+
