# src/ClientApi/models/WaitingListMetaDataResponse.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WaitingList.Api
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ValidationMessage } from './ValidationMessage';
+import {
+    ValidationMessageFromJSON,
+    ValidationMessageFromJSONTyped,
+    ValidationMessageToJSON,
+    ValidationMessageToJSONTyped,
+} from './ValidationMessage';
+import type { WaitingListDto } from './WaitingListDto';
+import {
+    WaitingListDtoFromJSON,
+    WaitingListDtoFromJSONTyped,
+    WaitingListDtoToJSON,
+    WaitingListDtoToJSONTyped,
+} from './WaitingListDto';
+
+/**
+ * 
+ * @export
+ * @interface WaitingListMetaDataResponse
+ */
+export interface WaitingListMetaDataResponse {
+    /**
+     * 
+     * @type {Array<ValidationMessage>}
+     * @memberof WaitingListMetaDataResponse
+     */
+    messages: Array<ValidationMessage>;
+    /**
+     * 
+     * @type {WaitingListDto}
+     * @memberof WaitingListMetaDataResponse
+     */
+    waitingList?: WaitingListDto;
+}
+
+/**
+ * Check if a given object implements the WaitingListMetaDataResponse interface.
+ */
+export function instanceOfWaitingListMetaDataResponse(value: object): value is WaitingListMetaDataResponse {
+    if (!('messages' in value) || value['messages'] === undefined) return false;
+    return true;
+}
+
+export function WaitingListMetaDataResponseFromJSON(json: any): WaitingListMetaDataResponse {
+    return WaitingListMetaDataResponseFromJSONTyped(json, false);
+}
+
+export function WaitingListMetaDataResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): WaitingListMetaDataResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'messages': ((json['messages'] as Array<any>).map(ValidationMessageFromJSON)),
+        'waitingList': json['waitingList'] == null ? undefined : WaitingListDtoFromJSON(json['waitingList']),
+    };
+}
+
+export function WaitingListMetaDataResponseToJSON(json: any): WaitingListMetaDataResponse {
+    return WaitingListMetaDataResponseToJSONTyped(json, false);
+}
+
+export function WaitingListMetaDataResponseToJSONTyped(value?: WaitingListMetaDataResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'messages': ((value['messages'] as Array<any>).map(ValidationMessageToJSON)),
+        'waitingList': WaitingListDtoToJSON(value['waitingList']),
+    };
+}
+
